add css all classes + reset

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="mockup"></div>
     <div class="container">
         <section class="picture-left"></section>
-        <section class="right">
+        <section class="content-right">
             <h1></h1>
             <h3></h3>
             <div class="right-bottom">
