add content and css dimensions

--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 <body>
     <div id="mockup"></div>
     <div class="container">
-        <section class="picture-left"></section>
+        <section class="picture-left">
+            <img src="./images/picture-left.png" alt="working at the computer">
+        </section>
         <section class="content-right">
-            <h1></h1>
-            <h3></h3>
+            <h1>A Quick Market-Driven Guide to Choosing a 'Profitable' Start-Up Name</h1>
+            <h3>And what 'profit' has to do with naming your startup</h3>
             <div class="right-bottom">
-                <div class="user-image">git</div>
+                <div class="user-image"><img src="./images/user-image.png" alt="user picture"></div>
                 <div class="user-info">
-                    <p class="user-name"></p>
-                    <p class="date"></p>
+                    <p class="user-name">Josiah Humphrey</p>
+                    <p class="date">Jun 23 • 9 min read</p>
                 </div>
-                <div class="icon"></div>
+                <div class="icon"><img src="./images/icon1.png" alt="icon"></div>
             </div>
         </section>
     </div>
