--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;600;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -15,7 +14,7 @@
             <img src="./images/picture-left.png" alt="working at the computer">
         </section>
         <section class="content-right">
-            <h1>A Quick Market-Driven Guide to Choosing a 'Profitable' Start-Up Name</h1>
+            <h1>A Quick Market-Driven Guide to Choosing a 'Profitable' <br> Start-Up Name</h1>
             <h3>And what 'profit' has to do with naming your startup</h3>
             <div class="right-bottom">
                 <div class="user-image"><img src="./images/user-image.png" alt="user picture"></div>
