add basic positioning cards

--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 <body>
     <div id="mockup"></div>
     <div class="container">
-        <div class="card">
+        <div class="card1">
             <header class="job">
                 FOUNDER, CEO
             </header>
@@ -32,7 +32,7 @@
                 </footer>
             </div>
         </div>
-        <div class="card">
+        <div class="card2">
             <header class="job">
                 DESIGNER
             </header>
@@ -54,7 +54,7 @@
                 </footer>
             </div>
         </div>
-        <div class="card">
+        <div class="card3">
             <header class="job">
                 PR MANAGER
             </header>
@@ -76,7 +76,7 @@
                 </footer>
             </div>
         </div>
-        <div class="card">
+        <div class="card4">
             <header class="job">
                 DEVELOPER
             </header>
