add positioning inside card

--- a/index2.html
+++ b/index2.html
@@ -25,10 +25,12 @@
                     Certe ertinax non numquam eius modi tempora incidunt, ut aut quid sit 
                     id, quod omnium philosophorum sententia tale debet esse, ut et iusto odio.
                 </div>
-                <footer class="social-media">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                <footer>
+                    <div class="social-media">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
                 </footer>
             </div>
         </div>
@@ -47,10 +49,12 @@
                     Certe ertinax non numquam eius modi tempora incidunt, ut aut quid sit 
                     id, quod omnium philosophorum sententia tale debet esse, ut et iusto odio.
                 </div>
-                <footer class="social-media">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                <footer>
+                    <div class="social-media">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
                 </footer>
             </div>
         </div>
@@ -69,10 +73,12 @@
                     Certe ertinax non numquam eius modi tempora incidunt, ut aut quid sit 
                     id, quod omnium philosophorum sententia tale debet esse, ut et iusto odio.
                 </div>
-                <footer class="social-media">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                <footer>
+                    <div class="social-media">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
                 </footer>
             </div>
         </div>
@@ -91,10 +97,12 @@
                     Certe ertinax non numquam eius modi tempora incidunt, ut aut quid sit 
                     id, quod omnium philosophorum sententia tale debet esse, ut et iusto odio.
                 </div>
-                <footer class="social-media">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                <footer>
+                    <div class="social-media">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
                 </footer>
             </div>
         </div>
