--- a/index2.html
+++ b/index2.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">     <link rel="stylesheet" href="style2.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@500,700&family=Roboto:wght@300&display=swap" rel="stylesheet">     <link rel="stylesheet" href="style2.css">
     <title>Document</title>
 </head>
 <body>
     <div id="mockup"></div>
     <div class="container">
-        <div class="card1">
+        <div class="card">
             <header class="job">
                 FOUNDER, CEO
             </header>
+            <hr>
             <div class="image">
                 <img src="./images/card-image1.png" alt="Founder, CEO Heather Clark">
             </div>
@@ -27,17 +28,18 @@
                 </div>
                 <footer>
                     <div class="social-media">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                 </footer>
             </div>
         </div>
-        <div class="card2">
+        <div class="card">
             <header class="job">
                 DESIGNER
             </header>
+            <hr>
             <div class="image">
                 <img src="./images/card-image2.png" alt="Designer Oliver Khan">
             </div>
@@ -51,17 +53,18 @@
                 </div>
                 <footer>
                     <div class="social-media">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                 </footer>
             </div>
         </div>
-        <div class="card3">
+        <div class="card">
             <header class="job">
                 PR MANAGER
             </header>
+            <hr>
             <div class="image">
                 <img src="./images/card-image3.png" alt="PR manager Alison Wong">
             </div>
@@ -75,17 +78,18 @@
                 </div>
                 <footer>
                     <div class="social-media">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                 </footer>
             </div>
         </div>
-        <div class="card4">
+        <div class="card">
             <header class="job">
                 DEVELOPER
             </header>
+            <hr>
             <div class="image">
                 <img src="./images/card-image4.png" alt="Developer Dave Thomas">
             </div>
@@ -99,8 +103,8 @@
                 </div>
                 <footer>
                     <div class="social-media">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                 </footer>
