crop all pictures same size

--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
             </header>
             <hr>
             <div class="image">
-                <img src="./images/card-image1.png" alt="Founder, CEO Heather Clark">
+                <img src="./images/card-image1-2.png" alt="Founder, CEO Heather Clark">
             </div>
             <div class="body">
                 <p class="name">
@@ -41,7 +41,7 @@
             </header>
             <hr>
             <div class="image">
-                <img src="./images/card-image2.png" alt="Designer Oliver Khan">
+                <img src="./images/card-image2-2.png" alt="Designer Oliver Khan">
             </div>
             <div class="body">
                 <p class="name">
@@ -66,7 +66,7 @@
             </header>
             <hr>
             <div class="image">
-                <img src="./images/card-image3.png" alt="PR manager Alison Wong">
+                <img src="./images/card-image3-2.png" alt="PR manager Alison Wong">
             </div>
             <div class="body">
                 <p class="name">
@@ -91,7 +91,7 @@
             </header>
             <hr>
             <div class="image">
-                <img src="./images/card-image4.png" alt="Developer Dave Thomas">
+                <img src="./images/card-image4-2.png" alt="Developer Dave Thomas">
             </div>
             <div class="body">
                 <p class="name">
