add bgc to body and cards

--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
             <header class="job">
                 FOUNDER, CEO
             </header>
-            <hr>
+            <hr class="line">
             <div class="image">
                 <img src="./images/card-image1-2.png" alt="Founder, CEO Heather Clark">
             </div>
@@ -39,7 +39,7 @@
             <header class="job">
                 DESIGNER
             </header>
-            <hr>
+            <hr class="line">
             <div class="image">
                 <img src="./images/card-image2-2.png" alt="Designer Oliver Khan">
             </div>
@@ -64,7 +64,7 @@
             <header class="job">
                 PR MANAGER
             </header>
-            <hr>
+            <hr class="line">
             <div class="image">
                 <img src="./images/card-image3-2.png" alt="PR manager Alison Wong">
             </div>
@@ -89,7 +89,7 @@
             <header class="job">
                 DEVELOPER
             </header>
-            <hr>
+            <hr class="line">
             <div class="image">
                 <img src="./images/card-image4-2.png" alt="Developer Dave Thomas">
             </div>
